# CryptoPulse-Real-Time-Arbitrage-Detection-Lakehouse

./: .env  README.md  pyproject.toml
data/checkpoints/bronze/: .metadata.crc  metadata
data/checkpoints/bronze/offsets/: .245.crc  (+201 more)
data/checkpoints/gold/: .metadata.crc  metadata
data/checkpoints/silver/: .metadata.crc  metadata
data/delta/bronze/: .part-00000-00dfb792-f154-42d5-8d7f-648806639055-c000.snappy.parquet.crc  .part-00000-01586354-6250-4a9e-b44b-c00067459fd5-c000.snappy.parquet.crc  .part-00000-01ffeeb3-78d3-47e7-837e-a9e9875df408-c000.snappy.parquet.crc  .part-00000-02114bcc-74e3-4425-bbca-7fffa4fbae11-c000.snappy.parquet.crc  .part-00000-0313976f-7040-4a3a-80f4-5d2789b3dd5f-c000.snappy.parquet.crc  .part-00000-0325bcc7-f16b-43b6-8f0e-96b463e06207-c000.snappy.parquet.crc  .part-00000-03433f27-dd72-4cdb-bc64-921c19872bf0-c000.snappy.parquet.crc  .part-00000-03fcae40-9afe-456a-aa55-e89d84450486-c000.snappy.parquet.crc  .part-00000-0533dcb6-373b-48aa-8fbe-fcb658bf5003-c000.snappy.parquet.crc  .part-00000-05ec0788-0229-43a8-aa5b-e7302d546164-c000.snappy.parquet.crc  .part-00000-05fcab65-9a92-49ad-aa08-13ec1da0efd0-c000.snappy.parquet.crc  .part-00000-06c241b8-d079-4208-b0d6-38f55802acdc-c000.snappy.parquet.crc  .part-00000-06c30065-012b-4d43-8671-eb38edbac4dd-c000.snappy.parquet.crc  (+677 more)
logs/: bronze.err  gold.err  producer.err  producer.out  silver.err  silver.out
src/dashboard/: app.py
src/jobs/: gold_layer.py  ingestion_bronze.py  orchestration.py  process_silver.py
src/producers/: main.py
src/utils/: check_bronze.py  check_data.py  check_gold.py
(+2949 files in other folders)
